# stenfw

./: CMakeLists.txt  README.md  config.h  debug  launch  snap  test
data2vdf/: raw2vdf.cpp  vdfcreate.cpp
data2vdf/vapor/: AMRData.h  AMRIO.h  AMRTree.h  AMRTreeBranch.h  Base64.h  BlkMemMgr.h  CFuncs.h  ColorMapBase.h  Compressor.h  DataMgr.h  DataMgrAMR.h  DataMgrFactory.h  DataMgrLayered.h  DataMgrLayered2.h  DataMgrWB.h  DataMgrWC.h  DataMgrWRF.h  EasyThreads.h  ExpatParseMgr.h  ExtensionClasses.h  GetAppPath.h  ImpExp.h  LayeredIO.h  Lifting1D.h  MOM.h  MapperFunctionBase.h  MatWaveBase.h  MatWaveDwt.h  MatWaveWavedec.h  Metadata.h  MetadataMOM.h  MetadataSpherical.h  MetadataVDC.h  MetadataWRF.h  MyBase.h  OpacityMapBase.h  OptionParser.h  PVTime.h  ParamNode.h  ParamsBase.h  (+33 more)
doc/: beamerthemeusi.sty  stenfw.tex
generators/include/: genirand.h  gensine3d.h
generators/src/: genirand.c  gensine3d.c
grid/include/: grid.h
grid/src/: allocate.c  balanced.c  chkvalid.c  gather.c  grid.c  multiply.c  overlap.c  scatter.c  setedges.c  setlinks.c  setsizes.c  subcpy.c
grid/tests/: test1.c  test1.pl  test2.cu  test3.c  test4.c  test5.c
stencils/isum13pt/: isum13pt.h  isum13pt_cpu.c  isum13pt_gpu.cu
stencils/wave13pt/: wave13pt.h  wave13pt_cpu.c  wave13pt_gpu.cu
stencils/wave13pt_patus/: wave13pt_avx.c  wave13pt_avxfma4.c  wave13pt_patus.h
tests/: test_init.c  test_init.h  test_load.c  test_parse.c
tests/isum13pt/: isum13pt_init.h  isum13pt_save.c  isum13pt_test.c
tests/wave13pt/: wave13pt_init.h  wave13pt_save.c  wave13pt_test.c
tests/wave13pt_patus/: wave13pt_patus_init.h  wave13pt_patus_save.c  wave13pt_patus_test.c
timing/: timing.c  timing.h
